addon/components/boxel/cta-block/index.css
.boxel-cta-block {
  --cta-block-padding-horizontal: var(--boxel-sp-lg);
  --cta-block-padding-vertical: var(--boxel-sp-lg);
  --button-base-height: 2rem; /* The height of the boxel button, used for calculating the min-height to reduce layout shift */
  --icon-color: var(--cta-block-text-color);

  position: relative;
  display: grid;
  grid-template-columns: auto auto minmax(var(--boxel-sp-sm), 1fr) auto auto;
  grid-template-rows: auto;
  grid-template-areas: "main cancel _ info lock-icon";
  align-items: center;
  padding: var(--cta-block-padding-vertical) var(--cta-block-padding-horizontal);
  background-color: var(--cta-block-background-color);
  color: var(--cta-block-text-color);
  font: var(--boxel-font-xs);
  transition: background-color var(--boxel-transition), padding var(--boxel-transition);
}

/* minimize layout shift by calculating a min-height for those cta blocks without steps */
.boxel-cta-block:not(.boxel-cta-block--has-step) {
  min-height: calc(var(--button-base-height) + var(--cta-block-padding-vertical) * 2);
}

/* basic dark + light theme with a twist for disabled */
.boxel-cta-block--dark {
  --cta-block-background-color: var(--boxel-purple-700);
  --cta-block-emphasis-text-color: var(--boxel-light);
  --cta-block-text-color: var(--boxel-purple-300);
}

.boxel-cta-block--dark.boxel-cta-block--disabled {
  --cta-block-background-color: rgba(57, 54, 66, 0.9);
}

.boxel-cta-block--light {
  --cta-block-background-color: var(--boxel-purple-100);
  --cta-block-emphasis-text-color: var(--boxel-dark);
  --cta-block-text-color: var(--boxel-purple-400);
}

/* paddings are different if there is a step */
.boxel-cta-block--memorialized.boxel-cta-block--has-step {
  --cta-block-padding-horizontal: var(--boxel-sp-lg);
  --cta-block-padding-vertical: var(--boxel-sp);
}

.boxel-cta-block--disabled.boxel-cta-block--has-step {
  --cta-block-padding-horizontal: var(--boxel-sp-lg);
  --cta-block-padding-vertical: var(--boxel-sp-xs);
}

/* add the step using a pseudoelement */
.boxel-cta-block__step {
  position: absolute;
  width: var(--cta-block-padding-horizontal);
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.boxel-cta-block__step::before {
  content: attr(data-step);
  font: 700 var(--boxel-font-sm);
  color: var(--cta-block-emphasis-text-color);
}

/* grid elements */
.boxel-cta-block__action-button {
  grid-area: main;
}

.boxel-cta-block__cancel-button {
  grid-area: cancel;
  margin-left: var(--boxel-sp);
}

.boxel-cta-block__info-area {
  grid-area: info;

  /*
  some defaults so that people can simply enter text
  if they want to supply more complex content they should be able to overwrite it
  */
  display: flex;
  align-items: center;
  justify-content: center;
}

.boxel-cta-block__action-status-area {
  grid-area: main;
  display: flex;
  align-items: center;
  justify-content: center;
  font: 600 var(--boxel-font-sm);
  color: var(--cta-block-emphasis-text-color);
}

/* The lock icon and notice is not shown when the cta is disabled */
.boxel-cta-block__private-notice {
  --boxel-cta-block-lock-icon-size: 0.75rem;

  grid-area: info;
  display: flex;
  align-items: center;
  text-align: right;
}

.boxel-cta-block__lock-icon {
  grid-area: lock-icon;
  width: var(--boxel-cta-block-lock-icon-size);
  height: var(--boxel-cta-block-lock-icon-size);
  margin-left: var(--boxel-sp-xs);
}

.boxel-cta-block--disabled .boxel-cta-block__private-notice,
.boxel-cta-block--disabled .boxel-cta-block__lock-icon {
  display: none;
}

/*
  Only visually show the "Actions only visible to you" message if someone hasn't added an info area
  Since the lock seems to be a visual cue that actions are only visible to the user
  We keep the text around and visible to screenreaders (tested only on VoiceOver)
*/
.boxel-cta-block__info-area ~ .boxel-cta-block__private-notice {
  position: absolute;
  display: block;
  width: 1px;
  height: 1px;
  min-width: 1px;
  min-height: 1px;
  padding: 0;
  margin: -1px;
  border: 0;
  clip: rect(0 0 0 0);
  clip-path: inset(50%);
  overflow: hidden;
  white-space: nowrap;
}

